# QRCodeCV4

./: .gitignore  CMakeLists.txt  README.md  main.cpp  note.md  qrcode.cpp  qrcode.hpp
quirc/: CMakeLists.txt
